src1/server/docker/k8s/-40-rook-ceph/45-ingress-prometheus-grafana.yaml
## Ингрес для проброса http-портов.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: docker-registry.suggest.io
    http:
      paths:
      - backend:
          serviceName: registry-svc
          servicePort: 5000
  - host: ci.suggest.io
    http:
      paths:
      - backend:
          serviceName: jenkins-svc
          servicePort: 8080
  - host: source.suggest.io
    http:
      paths:
      - backend:
          serviceName: gitlab-svc
          servicePort: 8080
  - host: prometheus.suggest.io
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
  - host: alerter.prometheus.suggest.io
    http:
      paths:
      - backend:
          serviceName: prometheus-alertmanager
          servicePort: 80
  - host: grafana.suggest.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
